# bevy-vn-test

./: .gitignore  AGENTS.md  Cargo.toml  PROGRESS.md  README.md  build.rs  error.txt  new.txt  pack_config.ron  progress-2026-05-31.md  progress-at-2026-05-30-23:40:25.md  routes.ron  玩家攻略.md
.superpowers/brainstorm/1190663-1779630964/content/: bg-cg-approach.html  layout.html  sprite-approach.html
.superpowers/brainstorm/1190663-1779630964/state/: server-info
.superpowers/brainstorm/1209936-1779632203/content/: choice-layout.html  waiting.html
.superpowers/brainstorm/1209936-1779632203/state/: server-stopped  server.pid
.superpowers/brainstorm/1225959-1779633416/content/: save-ui-layout.html
.superpowers/brainstorm/1225959-1779633416/state/: server-info  server-stopped  server.pid
.superpowers/brainstorm/1239514-1779634377/content/: gallery-layout.html
android/: .gitignore  build.gradle.kts  build.sh  build.sh.bak.2  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
assets/: missing.txt  routes.ron
assets/scripts/: bgm_index.ron  obj_index.ron
assets/scripts/scripts/: obj_index.ron
assets/shaders/: view_mask.wgsl
docs/: bgm-gallery-design.md  missing-features-priority.md  path-and-narration-analysis.md  rain-and-video-sprite-research.md  route-affection-plan.md  video-implementation-plan.md  video-system-implementation.md
docs/superpowers/plans/: 2026-05-24-artemis-export-plan.md  2026-05-24-bevy-vn-phase2-script-system.md  2026-05-24-bevy-vn-phase3-rendering-plan.md  2026-05-24-bevy-vn-phase4-audio-choice-plan.md  2026-05-24-bevy-vn-phase5-saveload-plan.md  2026-05-24-bevy-vn-phase6-affection-gallery-plan.md  2026-05-24-settings-interactivity-plan.md  2026-05-24-transition-animations-plan.md  2026-05-27-animatesprite-plan.md  2026-05-27-scrollbg-plan.md  2026-05-28-view-mask-material.md  2026-05-30-route-branching-plan.md  2026-05-31-android-video-ffmpeg-backend.md  2026-05-31-unmapped-tags-mapping.md
docs/superpowers/progress/: 2026-05-27-animatesprite-progress.md  2026-05-27-p2-6-event-markers-progress.md
docs/superpowers/specs/: 2026-05-24-artemis-export-design.md  2026-05-24-bevy-vn-phase3-rendering-design.md  2026-05-24-bevy-vn-phase4-audio-choice-design.md  2026-05-24-bevy-vn-phase5-saveload-design.md  2026-05-24-bevy-vn-phase6-affection-gallery-design.md  2026-05-24-settings-interactivity-design.md  2026-05-24-transition-animations-design.md  2026-05-27-animatesprite-design.md  2026-05-27-p2-6-event-markers-design.md  2026-05-27-scrollbg-design.md  2026-05-30-route-branching-design.md  2026-05-31-unmapped-tags-design.md  2026-06-01-after-story-system-design.md
docs/技术债务/: 场景黑屏问题.md  有关CG的问题.md
saves/: slot_0.json  slot_1.json  slot_10.json  slot_11.json  slot_12.json  slot_2.json  slot_3.json  slot_4.json  slot_5.json  slot_6.json  slot_7.json  slot_8.json  slot_9.json
src/: asset_pak.rs  audio_messages.rs  choice_messages.rs  components.rs  lib.rs  main.rs  rendering_messages.rs  resources.rs  script.rs  state.rs
src/plugins/: affection.rs  after_story.rs  audio.rs  backlog.rs  choice.rs  dialogue.rs  gallery.rs  inputs.rs  menu.rs  mod.rs  rendering.rs  route_end.rs  routing.rs  save_load.rs  screen_transition.rs  script_loader.rs  script_runner.rs  settings.rs  splash.rs  title.rs
src/plugins/event_system/: mod.rs  view.rs  view_data.rs  view_material.rs
src/plugins/video/: mod.rs
tests/artemis-export/: test_small.asb
tools/: bgm_title_map.json  fix_choice_branches.py  ocr_bgm_titles.py  tree-shake.py
tools/artemis-export/: Cargo.toml
tools/artemis-export/src/: asb.rs  iet.rs  lua_config.rs  main.rs  mapper.rs
tools/asset_packer/: Cargo.toml
tools/asset_packer/src/: main.rs
(+8 files in other folders)
