[package]
name = "bevy-vn"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_vn"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
default = []
android = [
    "bevy/android-game-activity",
    "bevy/android_shared_stdcxx",
    "android-activity/game-activity",
    "dep:android-activity",
    "dep:bevy_android",
]

[dependencies]
bevy = { version = "0.18", features = ["bevy_asset", "bevy_audio", "vorbis", "jpeg", "bevy_ui_render"] }
rodio = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
android-activity = { version = "0.6", optional = true }
bevy_android = { version = "0.18", optional = true }
ron = "0.8"
rand = "0.8"
dirs = "5"
#anyhow = "1"
bevy_scrollbar = "0.6"

# Target-specific video playback dependencies.
# Desktop uses system ffmpeg via bevy_movie_player when available:
# [target.'cfg(not(target_os = "android"))'.dependencies]
# bevy_movie_player = { version = "0.7", default-features = false, features = ["ffmpeg"] }
#
# Note: ffmpeg-sys-next 7.x does not compile against ffmpeg >= 8.0.
# See https://github.com/zmwang/rust-ffmpeg-sys for compatibility.

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["tools/artemis-export"]

[profile.release]
opt-level = 3
lto = "thin"
