[package]
name = "bevy-vn"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_vn"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
default = []
android = [
    "bevy/android-game-activity",
    "bevy/android_shared_stdcxx",
    "android-activity/game-activity",
    "dep:android-activity",
    "dep:bevy_android",
    "dep:jni",
]

[dependencies]
bevy = { version = "0.18", features = ["bevy_asset", "bevy_audio", "vorbis", "jpeg", "bevy_ui_render"] }
rodio = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
android-activity = { version = "0.6", optional = true }
bevy_android = { version = "0.18", optional = true }
jni = { version = "0.22", optional = true }
ron = "0.8"
rand = "0.8"
dirs = "5"
#anyhow = "1"
bevy_scrollbar = "0.6"
wgpu-types = "27"
bevy_framepace = "0.21"

[target.'cfg(not(target_os = "android"))'.dependencies]
gstreamer = "0.25"
gstreamer-video = "0.25"
gstreamer-app = "0.25"

[target.'cfg(target_os = "android")'.dependencies]
ffmpeg-the-third = { version = "5", features = ["build"] }
ndk = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies.zstd]
version = "0.13"
default-features = false
features = ["experimental"]

[dependencies.futures-lite]
version = "2.0.1"
default-features = false

[dependencies.memmap2]
version = "0.9"

[workspace]
members = ["tools/artemis-export", "tools/asset_packer"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
